Fixed password generator preview overflow

--- a/apps/desktop/src/scss/misc.scss
+++ b/apps/desktop/src/scss/misc.scss
@@ -203,6 +203,7 @@ p.lead {
   .generated-wrapper {
     text-align: left;
     width: 100%;
+    word-break: break-all;
   }
 
   .action-buttons {
